// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card when theme is "danger" should render the correct output 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "danger" should render the correct output when flex is set 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg flex flex-col items-center p-4 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "danger" should render the correct output when padding is "lg" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-6 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "danger" should render the correct output when padding is "md" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "danger" should render the correct output when padding is "none" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-0 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "danger" should render the correct output when padding is "sm" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-2 bg-red-100 border-red-300 text-red-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output when flex is set 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg flex flex-col items-center p-4 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output when padding is "lg" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-6 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output when padding is "md" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output when padding is "none" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-0 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "primary" should render the correct output when padding is "sm" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-2 bg-blue-100 border-blue-300 text-blue-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output when flex is set 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg flex flex-col items-center p-4 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output when padding is "lg" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-6 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output when padding is "md" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output when padding is "none" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-0 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "secondary" should render the correct output when padding is "sm" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-2 bg-gray-100 border-gray-300 text-gray-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output when flex is set 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg flex flex-col items-center p-4 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output when padding is "lg" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-6 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output when padding is "md" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output when padding is "none" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-0 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "success" should render the correct output when padding is "sm" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-2 bg-green-100 border-green-300 text-green-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output when flex is set 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg flex flex-col items-center p-4 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output when padding is "lg" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-6 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output when padding is "md" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-4 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output when padding is "none" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-0 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;

exports[`Card when theme is "warning" should render the correct output when padding is "sm" 1`] = `
<DocumentFragment>
  <div
    class="border-b-2 shadow-lg p-2 bg-yellow-100 border-yellow-300 text-yellow-800"
  >
    <p>
      Hello, world
    </p>
  </div>
</DocumentFragment>
`;
